examples/test/testpolicy13392.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13392
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key27: value14
      key43: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value0
          key46: value11
          key38: value3
      podSelector:
        matchLabels:
          key3: value16
